fixed issue where opponent's bullets were not getting removed and removed scrollbar from body

--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,5 @@
+body{ overflow: hidden;}
+
 .playingField {
 	border-style: solid;
 	border-color: green;
